--- a/dkeys.cfg
+++ b/dkeys.cfg
@@ -15,8 +15,12 @@ bind UPARROW "load_itempreset 1"
 bind RIGHTARROW "load_itempreset 2"
 bind DOWNARROW "load_itempreset 3"
 
-bind mwheeldown slot2
-bind mwheelup slot1
-bind alt slot3
+//bind mwheeldown slot2
+//bind mwheelup slot1
+//bind alt slot3
 
-exec a_binds
+bind mwheeldown secondary
+bind mwheelup primary
+bind alt melee
+
+exec aaa_OVERIDEBINDS
