--- a/rebindall.cfg
+++ b/rebindall.cfg
@@ -6,7 +6,7 @@
 //////////////////////////////////////////////////
 
 unbindall
-viewmodel_fov 80
+//viewmodel_fov 80
 fov_desired 90
 
 //Cancel movement
@@ -15,6 +15,17 @@ fov_desired 90
 -attack
 -attack2
 -attack3
+-right
+-left
+-moveright
+-moveleft
+
+//Viewmodel aliases
+alias primary "slot1; r_drawviewmodel 0"
+alias prialt "slot1; r_drawviewmodel 1"
+alias secondary "slot2; r_drawviewmodel 0"
+alias altdary "slot2; r_drawviewmodel 1"
+alias melee "r_drawviewmodel 1; slot3"
 
 
 bind f4 "askconnect_accept"
@@ -45,13 +56,13 @@ bind 9 "slot9"
 bind 0 "slot10"
 
 //  =; backspace; -
-alias "+ScoreDisplay" "+showscores; net_graph 1"
-alias "-ScoreDisplay" "-showscores; net_graph 0"
+//alias "+ScoreDisplay" "+showscores; net_graph 1"
+//alias "-ScoreDisplay" "-showscores; net_graph 0"
 
-alias +scores "+showscores; bind mouse3 schange"
-alias -scores "-showscores; tf_scoreboard_mouse_mode 0; bind mouse3 +attack3"
-alias schange "-showscores; tf_scoreboard_mouse_mode 1; +showscores"
-alias spray "impulse 201"
+//alias +scores "+showscores; bind mouse3 schange"
+//alias -scores "-showscores; tf_scoreboard_mouse_mode 0; bind mouse3 +attack3"
+//alias schange "-showscores; tf_scoreboard_mouse_mode 1; +showscores"
+//alias spray "impulse 201"
 
 bind tab +showscores
 bind q "lastinv"
@@ -67,10 +78,11 @@ alias -rattack "-reload; -attack3"
 bind r +reload
 bind y "say"
 bind u "say_team"
+bind i "say_party"
 bind o "cl_decline_first_notification"
 
 bind t "incrementvar r_drawviewmodel 0 1 1"
-bind p "hud_reloadscheme"
+bind = "hud_reloadscheme"
 
 bind [ "+movedown"
 //bind ] "viewmodel_fov 1000"
@@ -89,7 +101,9 @@ bind j "cl_trigger_first_notification"
 
 bind k "kill"
 bind l "dropitem"
+
 bind enter "impulse 201"
+//bind enter "say"
 
 bind capslock "+quickswitch"
 
@@ -106,6 +120,12 @@ bind n "open_charinfo_backpack
 bind m "open_charinfo_direct
 bind , "changeclass"
 bind . "changeteam
+//bind rshift "impulse 201"
+
+alias +stating "echo ' '; echo ' '; status"
+alias -stating "echo ' '; echo ' '"
+
+bind rshift +stating
 
 //   / ;  rshift
  
@@ -116,35 +136,12 @@ bind space "+jump"
 //CTRL and ALT are modifiers
 //   ralt; rctrl; leftarrow; rightarrow; uparrow; downarrow
 
-bind rctrl "incrementvar cl_first_person_uses_world_model 0 1 1"
+//bind rctrl "incrementvar cl_first_person_uses_world_model 0 1 1"
 
 bind LEFTARROW "load_itempreset 0"
 bind UPARROW "load_itempreset 1"
 bind RIGHTARROW "load_itempreset 2"
 bind DOWNARROW "load_itempreset 3"
-
-alias mouse_talk_on "bind KP_ENTER mouse_talk_off; bind mouse4 +voicerecord; echo MOUSE4 TALK ON"
-alias mouse_talk_off "bind KP_ENTER mouse_talk_on; unbind mouse4; echo MOUSE4 TALK OFF"
-
-bind KP_ENTER mouse_talk_off
-
-
-// CHAT BINDS
-////////////////
-alias first  "say All these flavors to choose from and you chose to be salty..."
-alias second  "say 'And this is where I'd put my defense... IF WE HAD ONE'"
-alias third "echo "
-alias forth "echo "
-alias fifth "echo "
-alias sixth "echo "
-alias seventh "echo "
-alias eighth "echo"
-alias ninth  "say ( ͡° ͜ʖ ͡°)"
-alias zeroth  "say ¯\_(ツ)_/¯"
-
-alias +memes "echo "1:salt, 2:defense, 9:lenny, 0:shrug"; bind 1 first; bind 2 second; bind 3 third; bind 4 forth; bind 5 fifth; bind 6 sixth; bind 7 seventh; bind 8 eighth; bind 9 ninth; bind 0 zeroth
-alias -memes "bind 1 slot1; bind 2 slot2; bind 3 slot3; bind 4 slot4; bind 5 slot5; bind 6 slot6; bind 7 slot7; bind 8 slot8; bind 9 slot9; bind 0 slot0
-bind ralt +memes
 
 //bind KP_SLASH
 //bind KP_MULTIPLY
@@ -160,19 +157,14 @@ bind UPARROW "load_itempreset 1"
 bind RIGHTARROW "load_itempreset 2"
 bind DOWNARROW "load_itempreset 3"
 
-
 bind mouse1 "+attack"
 bind mouse2 "+attack2"
-bind mouse4 "+voicerecord"
+bind mouse5 "+voicerecord"
 bind mwheeldown slot6
 
-//alias fastmofo "unbind mwheelup; unbind mwheeldown; hud_fastswitch 1; alias mofos "fastmofo""
-//alias slowmofo "bind mwheelup "invprev"; bind mwheeldown "invnext"; hud_fastswitch 0; alias mofos "slowmofo"
-//bind mwheelup "invprev"
-//bind mwheeldown "invnext"
+exec class_change //Keypad buttons for classes
 
-
-exec a_binds	//Can put temp binds in here
+exec aaa_OVERIDEBINDS	//Can put temp binds in here
 
 echo "  "
 echo "  "
