--- a/spy.cfg
+++ b/spy.cfg
@@ -1,20 +1,20 @@
 exec dkeys
 //////////////////////
+
+bind KP_PLUS "join_class spy"
+
+bind mwheelup slot1
+bind mwheeldown melee
+bind alt altdary
+bind ctrl lastdiguise ;
+
 alias +spy_attack "lastdisguise; +attack"
 alias -spy_attack "-attack"
 
 alias zoomin "fov_desired 60; bind ctrl "zoomout""
 alias zoomout "fov_desired 90; bind ctrl "zoomin""
-bind ctrl lastdiguise ;
 
-bind r "+reload"
-bind b "lastdisguise"
-bind alt "disguise 8 -2"
 
-bind KP_HOME "join_class medic"
-bind KP_UPARROW "join_class sniper"
-bind KP_PGUP "join_class pyro"
 
-bind KP_PLUS "join_class spy"
 
-bind mwheeldown slot3
+
